# Bevy-Platformer-Engine

./: Cargo.toml
assets/level/: ground.tset  level.ldtk
assets/level/level/simplified/Level_0/: Ground.csv  data.json
assets/level/level/simplified/Level_1/: Ground.csv  data.json
assets/shaders/: letterbox.wgsl
editor/: Cargo.toml
editor/src/: input.rs  lib.rs  tilemap.rs  ui.rs
object_manager/: Cargo.toml
object_manager/src/: file.rs  lib.rs
objects/: dirt_tile.object
objects/dirt_tile/: object.ron
runner/: Cargo.toml
runner/src/: globals.rs  lib.rs  object.rs  properties.rs  world_collisions.rs
src/: camera.rs  level.rs  main.rs  player.rs  world_collisions.rs
