[package]
name = "platformer_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0" }
bevy_framepace = "0.17.1"
bevy_editor_pls = { git = "https://github.com/zhaop/bevy_editor_pls", branch = "bevy-0.14" }
bevy-inspector-egui = "0.26.0"

runner = { path = "runner" }
bevy_ecs_tilemap = "0.14.0"
bevy_ecs_ldtk = "0.10.0"

[workspace]

members = [
    "runner"
]
